# sousarbarb.github.io

./: .gitignore  404.html  Gemfile  README.md  _config.yml  index.html  index.md  mkdocs.yml  sitemap.xml
_posts/: 2022-10-18-welcome-to-jekyll.markdown
assets/tools/docker/ros/: ros2humble.Dockerfile
awards/: index.html
cv/: index.html
docs/: _config.yml  about.md  awards.md  cv.md  index.md  open-source.md  projects.md  publications.md  researching.md  robotics.md  teaching.md  tools.md
docs/assets/tools/docker/ros/: ros2humble.Dockerfile
docs/stylesheets/: extra.css
docs/tools/: git.md  index.md
docs/tools/docker/: index.md  ros.md
docs/tools/os/: dev.md  index.md  nvidia.md  remote-access.md
open-source/: index.html
profile/: README.md
projects/: index.html
publications/: index.html
research/: index.html
robotics/: index.html
search/: search_index.json
src/docker/ros/: CMakeLists.txt  docker-compose.yml  package.xml
src/docker/ros/.devcontainer/ros1noetic/: c_cpp_properties.json  devcontainer.json  setup.sh
src/docker/ros/.devcontainer/ros2foxy/: c_cpp_properties.json  devcontainer.json  setup.sh
src/docker/ros/.devcontainer/ros2humble/: c_cpp_properties.json  devcontainer.json  setup.sh
src/docker/ros/.devcontainer/ros2jazzy/: c_cpp_properties.json  devcontainer.json  setup.sh
src/docker/ros/.devcontainer/ros2rolling/: c_cpp_properties.json  devcontainer.json  setup.sh
src/docker/ros/include/docker_ros_example/: example.h
src/docker/ros/launch/: docker_ros_example.launch  docker_ros_example.launch.xml
src/docker/ros/src/: main_ros1.cpp  main_ros2.cpp
teaching/: index.html
tools/: index.html
tools/docker/: index.html
tools/docker/ros/: index.html
tools/git/: index.html
tools/os/: index.html
tools/os/dev/: index.html
tools/os/nvidia/: index.html
tools/os/remote-access/: index.html
